crates/driver/tests/snapshots/const_uses.typed.snap
---
source: crates/driver/tests/frontend.rs
assertion_line: 103
expression: snap
---
line 2: ConsoleOnly
line 8: Print newline
  Num
    Int 3000000000 : I64
  Num
    Float 3.333333333333333E-1 : F64
  Num
    Int 2 : I16
  Str
    Str "ab" : Str
line 9: Print newline
  Num
    Convert Nearest : F32
      Float 3.0E+0 : F64 (qb F32)
  Num
    Int 3 : I32
  Num
    Int 0 : I16
  Num
    Int 2 : I16
line 11: Print newline
  Num
    Convert Nearest : F32
      Float 3.333333333333333E-1 : F64 (qb F32)
  Num
    Float 5.0E-1 : F80
  Num
    Float 1.0E+19 : F64
line 12: Call SB
  temp
    Convert Nearest : F32
      Int 3 : I64
line 13: End
SUB SB
  param I3:F32
line 16: Print newline
  Num
    Var I3 (param) : F32
